--- a/resources/views/Home.ejs
+++ b/resources/views/Home.ejs
@@ -1,197 +1,161 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="/css/app.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <nav class="container mx-auto flex items-center justify-between py-4">
-      <div>
-        <img src="/img/logo.png" />
-      </div>
-      <div>
-        <ul class="flex items-center">
-          <li class="ml-6"><a href="#">Menu</a></li>
-          <li class="ml-6"><a href="#">Offer</a></li>
-          <li class="ml-6"><a href="#">Register</a></li>
-          <li class="ml-6"><a href="#">Login</a></li>
-          <li class="ml-6">
-            <a href="#" class="inline-block px-4 py-2 rounded-full"
-              ><img src="/img/cart.png"
-            /></a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <section class="hero py-16">
-      <div class="container mx-auto flex items-center justify-between">
-        <div class="w-1/2">
-          <h3 class="text-lg"><em>Are you hungry?</em></h3>
-          <h1 class="text-6xl font-bold">Don't wait !</h1>
-        </div>
-        <div class="w-1/2">
-          <img src="/img/hero-pizza.png" />
+<section class="hero py-16">
+  <div class="container mx-auto flex items-center justify-between">
+    <div class="w-1/2">
+      <h3 class="text-lg"><em>Are you hungry?</em></h3>
+      <h1 class="text-6xl font-bold">Don't wait !</h1>
+      <button class="btn-primary text-white py-2 px-6 rounded-full mt-6">Order now</button>
+    </div>
+    <div class="w-1/2">
+      <img src="/img/hero-pizza.png" />
+    </div>
+  </div>
+</section>
+<section class="menu container mx-auto py-8">
+  <h2 class="font-bold text-lg">All Pizzas</h2>
+  <div class="grid grid-cols-4 gap-x-12 gap-y-16 row-gap-16">
+    <div class="w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
+      <div class="text-center">
+        <h2 class="text-lg mb-4">Magherita</h2>
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"
+          >small</span
+        >
+        <div class="flex items-center justify-around mt-6">
+          <span class="font-bold text-lg">250</span>
+          <button
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+          >
+            <span>+</span>
+            <span class="ml-4">Add</span>
+          </button>
         </div>
       </div>
-    </section>
-    <section class="menu container mx-auto py-8">
-      <h2 class="font-bold text-lg">All Pizzas</h2>
-      <div class="grid grid-cols-4 gap-x-12 gap-y-16 row-gap-16">
-        <div class="w-64">
-          <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
-          <div class="text-center">
-            <h2 class="text-lg mb-4">Magherita</h2>
-            <span class="size py-1 px-4 rounded-full uppercase text-xs"
-              >small</span
-            >
-            <div class="flex items-center justify-around mt-6">
-              <span class="font-bold text-lg">250</span>
-              <button
-                class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
-              >
-                <span>+</span>
-                <span class="ml-4">Add</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="w-64">
-          <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
-          <div class="text-center">
-            <h2 class="text-lg mb-4">Magherita</h2>
-            <span class="size py-1 px-4 rounded-full uppercase text-xs"
-              >small</span
-            >
-            <div class="flex items-center justify-around mt-6">
-              <span class="font-bold text-lg">250</span>
-              <button
-                class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
-              >
-                <span>+</span>
-                <span class="ml-4">Add</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="w-64">
-          <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
-          <div class="text-center">
-            <h2 class="text-lg mb-4">Magherita</h2>
-            <span class="size py-1 px-4 rounded-full uppercase text-xs"
-              >small</span
-            >
-            <div class="flex items-center justify-around mt-6">
-              <span class="font-bold text-lg">250</span>
-              <button
-                class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
-              >
-                <span>+</span>
-                <span class="ml-4">Add</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="w-64">
-          <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
-          <div class="text-center">
-            <h2 class="text-lg mb-4">Magherita</h2>
-            <span class="size py-1 px-4 rounded-full uppercase text-xs"
-              >small</span
-            >
-            <div class="flex items-center justify-around mt-6">
-              <span class="font-bold text-lg">250</span>
-              <button
-                class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
-              >
-                <span>+</span>
-                <span class="ml-4">Add</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="w-64">
-          <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
-          <div class="text-center">
-            <h2 class="text-lg mb-4">Magherita</h2>
-            <span class="size py-1 px-4 rounded-full uppercase text-xs"
-              >small</span
-            >
-            <div class="flex items-center justify-around mt-6">
-              <span class="font-bold text-lg">250</span>
-              <button
-                class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
-              >
-                <span>+</span>
-                <span class="ml-4">Add</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="w-64">
-          <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
-          <div class="text-center">
-            <h2 class="text-lg mb-4">Magherita</h2>
-            <span class="size py-1 px-4 rounded-full uppercase text-xs"
-              >small</span
-            >
-            <div class="flex items-center justify-around mt-6">
-              <span class="font-bold text-lg">250</span>
-              <button
-                class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
-              >
-                <span>+</span>
-                <span class="ml-4">Add</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="w-64">
-          <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
-          <div class="text-center">
-            <h2 class="text-lg mb-4">Magherita</h2>
-            <span class="size py-1 px-4 rounded-full uppercase text-xs"
-              >small</span
-            >
-            <div class="flex items-center justify-around mt-6">
-              <span class="font-bold text-lg">250</span>
-              <button
-                class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
-              >
-                <span>+</span>
-                <span class="ml-4">Add</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="w-64">
-          <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
-          <div class="text-center">
-            <h2 class="text-lg mb-4">Magherita</h2>
-            <span class="size py-1 px-4 rounded-full uppercase text-xs"
-              >small</span
-            >
-            <div class="flex items-center justify-around mt-6">
-              <span class="font-bold text-lg">250</span>
-              <button
-                class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
-              >
-                <span>+</span>
-                <span class="ml-4">Add</span>
-              </button>
-            </div>
-          </div>
+    </div>
+    <div class="w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
+      <div class="text-center">
+        <h2 class="text-lg mb-4">Magherita</h2>
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"
+          >small</span
+        >
+        <div class="flex items-center justify-around mt-6">
+          <span class="font-bold text-lg">250</span>
+          <button
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+          >
+            <span>+</span>
+            <span class="ml-4">Add</span>
+          </button>
         </div>
       </div>
-    </section>
-    <script src="/js/app.js"></script>
-  </body>
-</html>
+    </div>
+    <div class="w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
+      <div class="text-center">
+        <h2 class="text-lg mb-4">Magherita</h2>
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"
+          >small</span
+        >
+        <div class="flex items-center justify-around mt-6">
+          <span class="font-bold text-lg">250</span>
+          <button
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+          >
+            <span>+</span>
+            <span class="ml-4">Add</span>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
+      <div class="text-center">
+        <h2 class="text-lg mb-4">Magherita</h2>
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"
+          >small</span
+        >
+        <div class="flex items-center justify-around mt-6">
+          <span class="font-bold text-lg">250</span>
+          <button
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+          >
+            <span>+</span>
+            <span class="ml-4">Add</span>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
+      <div class="text-center">
+        <h2 class="text-lg mb-4">Magherita</h2>
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"
+          >small</span
+        >
+        <div class="flex items-center justify-around mt-6">
+          <span class="font-bold text-lg">250</span>
+          <button
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+          >
+            <span>+</span>
+            <span class="ml-4">Add</span>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
+      <div class="text-center">
+        <h2 class="text-lg mb-4">Magherita</h2>
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"
+          >small</span
+        >
+        <div class="flex items-center justify-around mt-6">
+          <span class="font-bold text-lg">250</span>
+          <button
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+          >
+            <span>+</span>
+            <span class="ml-4">Add</span>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
+      <div class="text-center">
+        <h2 class="text-lg mb-4">Magherita</h2>
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"
+          >small</span
+        >
+        <div class="flex items-center justify-around mt-6">
+          <span class="font-bold text-lg">250</span>
+          <button
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+          >
+            <span>+</span>
+            <span class="ml-4">Add</span>
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="w-64">
+      <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" />
+      <div class="text-center">
+        <h2 class="text-lg mb-4">Magherita</h2>
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"
+          >small</span
+        >
+        <div class="flex items-center justify-around mt-6">
+          <span class="font-bold text-lg">250</span>
+          <button
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+          >
+            <span>+</span>
+            <span class="ml-4">Add</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
