--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -25,7 +25,7 @@
           <li class="ml-6"><a href="#">Register</a></li>
           <li class="ml-6"><a href="#">Login</a></li>
           <li class="ml-6">
-            <a href="#" class="inline-block px-4 py-2 rounded-full"
+            <a href="/cart" class="inline-block px-4 py-2 rounded-full"
               ><img src="/img/cart.png"
             /></a>
           </li>
