--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -2,6 +2,10 @@
 
 @import "./variable.scss";
 
+@import "../../node_modules/noty/src/noty.scss";
+@import "../../node_modules/noty/src/themes/mint.scss";
+
+
 body {
     font-family: "Lato", sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -57,4 +61,9 @@ section.hero{
     background-color: $secondary;
     min-height: calc(100vh - 100px);
 
+}
+
+.noty_theme__mint{
+    border-radius: 50px!important;
+    padding-left: 8px!important;
 }
