--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -4,40 +4,27 @@
       <img class="img-cart" src="/img/cart-black.png" />
       <span class="font-bold ml-4 text-2xl">Order summaray</span>
     </div>
-    <div class="pizza-list">
-      <div class="flex items-center my-8">
-        <img class="w-24" src="/img/pizza.png" />
-        <div class="flex-1 ml-4">
-          <h1>Marinara</h1>
-          <span>medium</span>
+    <% if (session.cart) { %>
+      <div class="pizza-list">
+        <% for(let pizza of Object.values(session.cart.items)) {%>
+        <div class="flex items-center my-8">
+          <img class="w-24" src="/img/<%= pizza.item.image %>" />
+          <div class="flex-1 ml-4">
+            <h1><%= pizza.item.name %></h1>
+            <span><%= pizza.item.size %></span>
+          </div>
+          <span class="flex-1"><%= pizza.qty %> Pcs</span>
+          <span class="">₹<%= pizza.item.price * pizza.qty %></span>
         </div>
-        <span class="flex-1">1pcs</span>
-        <span class="">300</span>
+        <%} %>
       </div>
-      <div class="flex items-center my-8">
-        <img class="w-24" src="/img/pizza.png" />
-        <div class="flex-1 ml-4">
-          <h1>Marinara</h1>
-          <span>medium</span>
-        </div>
-        <span class="flex-1">1pcs</span>
-        <span class="">300</span>
-      </div>
-      <div class="flex items-center my-8">
-        <img class="w-24" src="/img/pizza.png" />
-        <div class="flex-1 ml-4">
-          <h1>Marinara</h1>
-          <span>medium</span>
-        </div>
-        <span class="flex-1">1pcs</span>
-        <span class="">300</span>
-      </div>
-    </div>
+    
+    
     <hr />
     <div class="text-right py-4">
       <div>
         <span class="text-lg font-bold">Total Amount:</span>
-        <span class="amount font-bold text-2xl ml-2">300</span>
+        <span class="amount font-bold text-2xl ml-2">₹<%= session.cart.totalPrice %></span>
       </div>
       <div>
             <form action="" class="mt-12">
@@ -55,8 +42,9 @@
       >
     </div>
   </div>
-
-  <!-- <div class="empty-cart">
+  <% } else { %>
+  
+  <div class="empty-cart">
     <div class="container mx-auto text-center">
       <h2 class="text-3xl font-bold mb-2">Cart Empty 😔</h2>
       <p class="text-gray-500 text-lg mb-12">
@@ -70,5 +58,7 @@
         >Go back</a
       >
     </div>
-  </div> -->
+  </div>
+  <% } %>
+
 </section>
