--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -25,9 +25,12 @@
           <li class="ml-6"><a href="#">Register</a></li>
           <li class="ml-6"><a href="#">Login</a></li>
           <li class="ml-6">
-            <a href="/cart" class="inline-block px-4 py-2 rounded-full"
-              ><img src="/img/cart.png"
-            /></a>
+            <a href="/cart" class="inline-block flex items-center px-4 py-2 rounded-full"
+              >
+              <img src="/img/cart.png"/>
+
+              <sup id="cart-count" class="text-white pl-2"><%= session.cart ? session.cart.totalQty : '' %></sup>
+            </a>
           </li>
         </ul>
       </div>
