--- a/resources/views/auth/login.ejs
+++ b/resources/views/auth/login.ejs
@@ -13,7 +13,7 @@
 
     <div class="mt-5 sm:mx-auto sm:w-full sm:max-w-md">
       <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-        <form class="space-y-6" action="#" method="POST">
+        <form class="space-y-6" action="/login" method="post">
           <div>
             <label for="email" class="block text-sm font-medium text-gray-700">
               Email address
