--- a/resources/views/auth/signup.ejs
+++ b/resources/views/auth/signup.ejs
@@ -13,7 +13,13 @@
   
       <div class="mt-5 sm:mx-auto sm:w-full sm:max-w-md">
         <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-          <form class="space-y-6" action="#" method="POST">
+          <form class="space-y-6" action="/signup" method="post">
+            
+                <% if (messages.error) { %>
+                  <span class="text-red-500 font-semibold"><%= messages.error %>!</span>
+                <% } %>
+          
+            
             <div>
                 <label
                   for="fullName"
@@ -24,7 +30,7 @@
                 <div class="mt-1">
                   <input
                     id="fullName"
-                    name="fullName"
+                    name="username"
                     type="text"
                     autocomplete=""
                     required
@@ -75,6 +81,9 @@
                 Sign up
               </button>
             </div>
+            <% if (messages.message) { %>
+             <span class="font-semibold text-red-700"><%= messages.message %></span>
+            <% } %>
           </form>
           <div class="mt-6">
             <p class="text-center text-sm text-gray-600">
