--- a/resources/views/Home.ejs
+++ b/resources/views/Home.ejs
@@ -1,38 +1,36 @@
 <section class="hero py-16">
-  <div class="container mx-auto flex items-center justify-between">
-    <div class="w-1/2">
+  <div class="sm:px-16 px-8 mx-auto flex flex-col-reverse md:flex-row items-center justify-between">
+    <div class="w-full md:w-1/2 text-center md:text-left md:pr-16">
       <h3 class="text-lg"><em>Are you hungry?</em></h3>
-      <h1 class="text-6xl font-bold">Don't wait !</h1>
+      <h1 class="text-3xl md:text-6xl font-bold">Don't wait!</h1>
       <button class="btn-primary text-white py-2 px-6 rounded-full mt-6">Order now</button>
     </div>
-    <div class="w-1/2">
-      <img src="/img/hero-pizza.png" />
+    <div class="w-full md:w-1/2 mt-8 md:mt-0">
+      <img class="mx-auto md:mx-0 h-auto md:h-full" src="/img/hero-pizza.png" alt="Pizza" />
     </div>
   </div>
 </section>
-<section class="menu container mx-auto py-8">
-  <h2 class="font-bold text-lg">All Pizzas</h2>
-  <div class="grid grid-cols-4 gap-x-12 gap-y-16 row-gap-16">
-   <% pizzas.forEach(pizza => { %>
-    <div class="w-64">
-      <img class="h-40 mb-4 mx-auto" src="/img/<%= pizza.image %>" />
+
+<section class="menu container mx-auto py-8 sm:px-16 px-8">
+  <h2 class="font-bold text-lg text-center">All Pizzas</h2>
+  <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-12 gap-y-16 row-gap-16">
+    <% pizzas.forEach(pizza => { %>
+    <div class="w-full sm:w-auto">
+      <img class=" w-40 md:h-auto mb-4 mx-auto" src="/img/<%= pizza.image %>" alt="<%= pizza.name %>" />
       <div class="text-center">
         <h2 class="text-lg mb-4"><%= pizza.name %></h2>
-        <span class="size py-1 px-4 rounded-full uppercase text-xs"
-          ><%= pizza.size %></span
-        >
-        <div class="flex items-center justify-around mt-6">
+        <span class="size py-1 px-4 rounded-full uppercase text-xs"><%= pizza.size %></span>
+        <div class="flex flex-col md:flex-row items-center justify-center md:justify-between mt-6">
           <span class="font-bold text-lg">₹<%= pizza.price %></span>
           <button data-pizza="<%= JSON.stringify(pizza) %>"
-            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold mt-4 md:mt-0"
           >
             <span>+</span>
-            <span class="ml-4">Add</span>
+            <span class="ml-2">Add</span>
           </button>
         </div>
       </div>
     </div>
-   <% }) %>
-    
+    <% }) %>
   </div>
 </section>
