--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -1,70 +1,57 @@
-<section class="cart py-16">
-  <div class="order container mx-auto w-1/2">
+<section class="cart py-16 sm:px-16 px-8">
+  <div class="order mx-auto sm:w-3/4 lg:w-1/2">
     <div class="flex items-center border-b border-gray-300 pb-4">
       <img class="img-cart" src="/img/cart-black.png" />
-      <span class="font-bold ml-4 text-2xl">Order summaray</span>
+      <span class="font-bold ml-4 text-2xl">Order summary</span>
     </div>
     <% if (session.cart) { %>
-      <div class="pizza-list">
+      <div class="pizza-list mt-8">
         <% for(let pizza of Object.values(session.cart.items)) {%>
-        <div class="flex items-center my-8">
-          <img class="w-24" src="/img/<%= pizza.item.image %>" />
-          <div class="flex-1 ml-4">
-            <h1><%= pizza.item.name %></h1>
-            <span><%= pizza.item.size %></span>
+          <div class="flex flex-col sm:flex-row items-center my-6">
+            <img class="w-24 sm:mr-4 mb-4 sm:mb-0" src="/img/<%= pizza.item.image %>" />
+            <div class="ml-4">
+              <h1 class="text-lg"><%= pizza.item.name %></h1>
+              <span class="text-sm"><%= pizza.item.size %></span>
+            </div>
+            <span class="mt-2 sm:mt-0 ml-auto"><%= pizza.qty %> Pcs</span>
+            <span class="ml-2">₹<%= pizza.item.price * pizza.qty %></span>
           </div>
-          <span class="flex-1"><%= pizza.qty %> Pcs</span>
-          <span class="">₹<%= pizza.item.price * pizza.qty %></span>
-        </div>
         <%} %>
-      </div>
+      </div>  
     
-    
-    <hr />
-    <div class="text-right py-4">
-      <div>
-        <span class="text-lg font-bold">Total Amount:</span>
-        <span class="amount font-bold text-2xl ml-2">₹<%= session.cart.totalPrice %></span>
-      </div>
-      <% if (user) { %>
-        <div>
-        
-          <form action="/orders" method="post" class="mt-12">
-              <input name="phone" class="border border-gray-400 p-2 w-1/2 mb-4" type="text" placeholder="Phone number"/>
-              <input name="address" class="border border-gray-400 p-2 w-1/2" type="text" placeholder="Address"/>
-              <div>
-                 <button type="submit" class="btn-primary px-6 py-2 font-bold text-white rounded-full mt-6">Order Now</button>
-              </div>
-          </form>
-      </div>
-        <% } else { %>
+      <hr class="my-8" />
       
-      <a
-        href="/login"
-        class="inline-block cursor-pointer btn-primary px-6 py-2 font-bold text-white rounded-full mt-6"
-        >Login to continue</a
-      >
-      <% } %>
-    </div>
+      <div class="text-right py-4">
+        <div>
+          <span class="text-lg font-bold">Total Amount:</span>
+          <span class="amount font-bold text-2xl ml-2">₹<%= session.cart.totalPrice %></span>
+        </div>
+        <% if (user) { %>
+          <div class="mt-8">
+            <form action="/orders" method="post">
+              <input name="phone" class="border border-gray-400 p-2 w-full mb-4 sm:w-1/2" type="text" placeholder="Phone number"/>
+              <input name="address" class="border border-gray-400 p-2 w-full mb-4 sm:w-1/2" type="text" placeholder="Address"/>
+              <div>
+                <button type="submit" class="btn-primary px-6 py-2 font-bold text-white rounded-full">Order Now</button>
+              </div>
+            </form>
+          </div>
+        <% } else { %>
+          <a href="/login" class="inline-block cursor-pointer btn-primary px-6 py-2 font-bold text-white rounded-full mt-8">Login to continue</a>
+        <% } %>
+      </div>
+    <% } else { %>
+      <div class="empty-cart">
+        <div class="container mx-auto text-center">
+          <h2 class="text-3xl font-bold mb-2">Cart Empty 😔</h2>
+          <p class="text-gray-500 text-lg mb-8">
+            You probably haven't ordered a pizza yet.<br />
+            To order a pizza, go to the main page.
+          </p>
+          <img class="w-2/5 mx-auto mb-8" src="/img/empty-cart.png" />
+          <a href="/" class="inline-block px-6 py-2 rounded-full btn-primary text-white font-bold">Go back</a>
+        </div>
+      </div>
+    <% } %>
   </div>
- 
-  <% } else { %>
-  
-  <div class="empty-cart">
-    <div class="container mx-auto text-center">
-      <h2 class="text-3xl font-bold mb-2">Cart Empty 😔</h2>
-      <p class="text-gray-500 text-lg mb-12">
-        You probably haven't ordered a pizza yer.<br />
-        To order a pizza. go to the main page
-      </p>
-      <img class="w-2/5 mx-auto" src="/img/empty-cart.png" />
-      <a
-        href="/"
-        class="inline-block px-6 py-2 rounded-full btn-primary text-white font-bold mt-12"
-        >Go back</a
-      >
-    </div>
-  </div>
-  <% } %>
-
 </section>
