--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -57,7 +57,7 @@
 <body>
   <nav class="sm:px-16 px-8 mx-auto flex items-center justify-between py-4">
     <div>
-      <img src="/img/logo.png" />
+      <img class="w-20" src="/img/logo.png" />
     </div>
     <div>
       <ul class="nav-menu flex items-center nav-links">
