--- a/resources/views/admin/orders.ejs
+++ b/resources/views/admin/orders.ejs
@@ -1,4 +1,4 @@
-<section class="orders light-section">
+<section class="orders light-section sm:px-16 px-8">
     <div class="container mx-auto pt-12">
         <h1 class="font-bold text-lg mb-4">All orders</h1>
         <table class="w-full table-auto bg-white">
